--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-       
+
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                <p> I was born and raised in Brooklyn, NY.</p>
             </div>
             <div class="div-2">
-                Div 2
+                <p> My passion: I LOVE music - it's one of the most powerful and diverse methods for expression and communication. In the meantime, I get my fix by going to lots and lots of concerts. I'm at 23 and counting!</p>
             </div>
             <div class="div-3">
-                Div 3
+                <p> A fun fact: As a true New Yorker, I'm slightly embarrased to say that I've never visted the Statue of Liberty. But, the real takeaway is that I'm planning on paying the site a visit real soon.</p>
             </div>
-        </section>    
+        </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
